# Real-Time-Multi-Agent-LLM-Orchestration-and-Evaluation-System

./: .gitignore  README.md  main.py  pyproject.toml
src/agent/: compression.py  critique.py  decomposition.py  graph.py  orchestrator.py  rag.py  synthesis.py
src/api/: main.py
src/config/: prompts.py  settings.py
src/core/: config.py  context.py  llm.py
src/schemas/: state.py
src/tools/: __init__.py  base.py  python_sandbox.py  self_reflection.py  sql_lookup.py  web_search.py
