[project]
name = "Real-time-multi-agent-llm-orchestration-and-evaluation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.3.3",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.10",
    "pydantic>=2.13.4",
    "typing-extensions>=4.15.0",
]
