[project]
name = "Real-time-multi-agent-llm-orchestration-and-evaluation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "langchain-core>=1.3.3",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.2",
    "tiktoken>=0.12.0",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.46.0",
]
